Several improvements and fixes
Add class no-mandatory-indicator to Button.less.
Add classes no-mandatory-indicator, top- and bottom-padding-invisible to LabelField.less.
Fix focus error on LabelField: the label changed its color when it was double clicked
even though the label field cannot be focused.

Reviewed-on: https://git.eclipse.org/r/c/scout/org.eclipse.scout.rt/+/169440
Tested-by: Claudio Guglielmo <claudio.guglielmo@bsiag.com>

--- a/eclipse-scout-core/src/form/fields/button/Button.less
+++ b/eclipse-scout-core/src/form/fields/button/Button.less
@@ -29,6 +29,10 @@
 
 .button-field > .field {
   margin-left: @mandatory-indicator-width;
+
+  .no-mandatory-indicator& {
+    margin-left: 0;
+  }
 }
 
 .button-field > .field.link-button {
