--- a/eclipse-scout-core/src/form/fields/labelfield/LabelField.less
+++ b/eclipse-scout-core/src/form/fields/labelfield/LabelField.less
@@ -23,6 +23,18 @@
     #scout.placeholder-disabled();
   }
 
+  .no-mandatory-indicator& {
+    margin-left: 0;
+  }
+
+  .top-padding-invisible& {
+    padding-top: 0;
+  }
+
+  .bottom-padding-invisible& {
+    padding-bottom: 0;
+  }
+
   &.has-inner-alignment {
 
     &.halign-left {
